--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
+    "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
     "clsx": "^1.2.1",
     "gotrue-js": "^0.9.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
-    "react-router-dom": "^6.4.4"
+    "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -29,15 +29,15 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
     "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.11.10",
+    "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.45.0",
-    "@vitejs/plugin-react": "^2.2.0",
-    "@vitest/ui": "^0.25.3",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/ui": "^0.25.6",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.28.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -46,12 +46,12 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jsdom": "^20.0.3",
     "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.0",
     "vite-tsconfig-paths": "^3.6.0",
-    "vitest": "^0.25.3"
+    "vitest": "^0.25.6"
   }
 }
