--- a/package.json
+++ b/package.json
@@ -14,44 +14,58 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.5",
-    "@heroicons/react": "^2.0.13",
-    "clsx": "^1.2.1",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "gotrue-js": "^0.9.29",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.40.0",
-    "react-router-dom": "^6.4.5"
+    "react-hook-form": "^7.44.2",
+    "react-router-dom": "^6.11.2",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.11.12",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "@vitest/ui": "^0.25.6",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.2.5",
+    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-react-swc": "^3.3.1",
+    "@vitest/ui": "^0.31.2",
+    "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "jsdom": "^20.0.3",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.0",
-    "vite-tsconfig-paths": "^3.6.0",
-    "vitest": "^0.25.6"
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint": "^8.41.0",
+    "jsdom": "^22.1.0",
+    "postcss": "^8.4.24",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prettier": "^2.8.8",
+    "tailwind-merge": "^1.12.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-debug-screens": "^2.2.1",
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.0.4",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vite": "^4.3.9",
+    "vitest": "^0.31.2"
+  },
+  "prettier": {
+    "jsxSingleQuote": true,
+    "printWidth": 100,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "useTabs": false,
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
