--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,9 +29,18 @@
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}",
       "cleanUp": "wholeBrowser",
-      "runtimeArgs": ["--auto-open-devtools-for-tabs", "--start-maximized"],
+      "runtimeArgs": [
+        "--auto-open-devtools-for-tabs",
+        "--start-maximized",
+        "--bwsi",
+        "--allow-insecure-localhost",
+        "--disable-component-update",
+        "--disable-crash-reporter",
+        "--disable-extensions",
+        "--disable-hang-monitor",
+        "--suppress-message-center-popups",
+      ],
       "internalConsoleOptions": "openOnSessionStart",
-      "preLaunchTask": "npm: dev",
       "presentation": {
         "hidden": true,
         "group": "debug",
